--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "dependencies": {
     "antd": "^3.19.3",
     "antd-mobile": "^2.2.14",
+    "antd-mobile-demo-data": "^0.2.0",
     "axios": "^0.19.0",
     "flux": "^3.1.3",
     "history": "^4.9.0",
