--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^3.0.0",
     "cssgrace": "^3.0.0",
+    "echarts": "^4.2.1",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^4.0.0",
     "html-webpack-plugin": "^3.2.0",
@@ -53,6 +54,7 @@
     "redux": "^4.0.1",
     "redux-promise": "^0.6.0",
     "redux-saga": "^1.0.3",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "video-react": "^0.14.0"
   }
 }
